--- a/StackOverflow_2020_USvsIndia_Final.ipynb
+++ b/StackOverflow_2020_USvsIndia_Final.ipynb
@@ -3673,7 +3673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3683,7 +3683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3700,38 +3700,7 @@
     "Note: this code needs to be improved further. \n",
     "'''\n",
     "\n",
-    "#Empty lists\n",
-    "my_list11 = []\n",
-    "my_list22 = []\n",
     "\n",
-    "#For loop to iterate through each Devtypes in DevType_Values list\n",
-    "for j in  DevType_Values:\n",
-    "    \n",
-    "    #Creat dataframe to store all rows which contains a particular DevType\n",
-    "    abcd = df_us1[df_us1['DevType'].str.contains(j)]\n",
-    "    #Find the median salary of the dataframe for the DevType and store as a list\n",
-    "    my_list = abcd['ConvertedComp'].median()\n",
-    "    #Append the list with median salary, for each DevType in DevType_Values\n",
-    "    my_list11.append(my_list)\n",
-    "    #Append the individual DevType to another list.\n",
-    "    my_list22.append(j)\n",
-    "    \n",
-    "#Convert list to a Dataframe\n",
-    "df_my_list11 = pd.DataFrame(my_list11, columns = ['Salary'])\n",
-    "df_my_list22 = pd.DataFrame(my_list22, columns = ['Job type'])\n",
-    "\n",
-    "#Join the DevType list and the corresponding MEdian for each devtype to a single dataframe. \n",
-    "df_my_list11['Job Type'] = df_my_list22\n",
-    "df_my_list11\n",
-    "df_my_list11 = df_my_list11.sort_values(by = 'Salary', ascending = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def split_the_multipunch(data_frame, column_name1 , column_name2 , value):\n",
     "    #Empty lists\n",
     "    my_list1 = []\n",
@@ -3755,7 +3724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3809,96 +3778,6 @@
        "      <td>125000.0</td>\n",
        "      <td>Data scientist or machine learning specialist</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>125000.0</td>\n",
-       "      <td>Product manager</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>125000.0</td>\n",
-       "      <td>DevOps specialist</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>Developer, mobile</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>Scientist</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>Developer, back-end</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>Developer, embedded applications or devices</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>115000.0</td>\n",
-       "      <td>Developer, desktop or enterprise applications</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>115000.0</td>\n",
-       "      <td>Educator</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>112461.0</td>\n",
-       "      <td>Developer, full-stack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>111300.0</td>\n",
-       "      <td>Developer, game or graphics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>System administrator</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>Developer, front-end</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>Database administrator</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>105000.0</td>\n",
-       "      <td>Developer, QA or test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>Data or business analyst</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>Designer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>Academic researcher</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>89000.0</td>\n",
-       "      <td>Marketing or sales professional</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -3909,40 +3788,22 @@
        "17       151500.0                            Engineering manager\n",
        "16       140000.0                     Engineer, site reliability\n",
        "15       125000.0                                 Engineer, data\n",
-       "2        125000.0  Data scientist or machine learning specialist\n",
-       "19       125000.0                                Product manager\n",
-       "13       125000.0                              DevOps specialist\n",
-       "11       120000.0                              Developer, mobile\n",
-       "20       120000.0                                      Scientist\n",
-       "5        120000.0                            Developer, back-end\n",
-       "7        120000.0    Developer, embedded applications or devices\n",
-       "6        115000.0  Developer, desktop or enterprise applications\n",
-       "14       115000.0                                       Educator\n",
-       "9        112461.0                          Developer, full-stack\n",
-       "10       111300.0                    Developer, game or graphics\n",
-       "22       110000.0                           System administrator\n",
-       "8        110000.0                           Developer, front-end\n",
-       "3        110000.0                         Database administrator\n",
-       "12       105000.0                          Developer, QA or test\n",
-       "1        100000.0                       Data or business analyst\n",
-       "4        100000.0                                       Designer\n",
-       "0        100000.0                            Academic researcher\n",
-       "18        89000.0                Marketing or sales professional"
+       "2        125000.0  Data scientist or machine learning specialist"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "median_sal = split_the_multipunch(df_us1 ,'DevType' , 'ConvertedComp' ,  DevType_Values)\n",
-    "median_sal"
+    "median_sal_us = split_the_multipunch(df_us1 ,'DevType' , 'ConvertedComp' ,  DevType_Values)\n",
+    "median_sal_us.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3951,7 +3812,7 @@
        "Text(0, 0.5, '')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3971,7 +3832,7 @@
    "source": [
     "# Bar Chart to indicate median salary for each DevType\n",
     "plt.figure(figsize=[8,8])\n",
-    "sns.barplot( y = 'Job Type' , x = 'Salary', data = df_my_list11 , palette = sns.color_palette(\"Set3\", 1) ).set_title(\"USA\")\n",
+    "sns.barplot( y = 'DevType' , x = 'ConvertedComp', data = median_sal_us , palette = sns.color_palette(\"Set3\", 1) ).set_title(\"USA\")\n",
     "plt.xlabel(\"Median Salary(USD)\")\n",
     "plt.ylabel(\"\")"
    ]
@@ -3985,31 +3846,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#To calculate median Salary for each DevType\n",
-    "\n",
-    "df_ind1 = df_ind.dropna(subset = ['ConvertedComp', 'DevType'], axis = 0)\n",
-    "\n",
-    "my_list1 = []\n",
-    "my_list2 = []\n",
-    "for i in  DevType_Values:\n",
-    "    abc = df_ind1[df_ind1['DevType'].str.contains(i)]\n",
-    "    my_list = abc['ConvertedComp'].median()\n",
-    "    my_list1.append(my_list)\n",
-    "    my_list2.append(i)\n",
-    "\n",
-    "df_my_list1 = pd.DataFrame(my_list1, columns = ['Salary'])\n",
-    "df_my_list2 = pd.DataFrame(my_list2, columns = ['Job type'])\n",
-    "df_my_list1['Job Type'] = df_my_list2\n",
-    "df_my_list1 = df_my_list1.sort_values(by = 'Salary', ascending = False)"
+    "df_ind1 = df_ind.dropna(subset = ['ConvertedComp', 'DevType'], axis = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConvertedComp</th>\n",
+       "      <th>DevType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>33508.0</td>\n",
+       "      <td>Engineering manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>20943.0</td>\n",
+       "      <td>Senior executive/VP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17452.0</td>\n",
+       "      <td>Engineer, site reliability</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>16752.0</td>\n",
+       "      <td>DevOps specialist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>16752.0</td>\n",
+       "      <td>Product manager</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ConvertedComp                     DevType\n",
+       "17        33508.0         Engineering manager\n",
+       "21        20943.0         Senior executive/VP\n",
+       "16        17452.0  Engineer, site reliability\n",
+       "13        16752.0           DevOps specialist\n",
+       "19        16752.0             Product manager"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_sal_ind = split_the_multipunch(df_ind1 ,'DevType' , 'ConvertedComp' ,  DevType_Values)\n",
+    "median_sal_ind.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -4018,7 +3943,7 @@
        "Text(0, 0.5, '')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4038,7 +3963,7 @@
    "source": [
     "# Bar Chart to indicate median salary for each DevType\n",
     "plt.figure(figsize=[8,8])\n",
-    "sns.barplot( y = 'Job Type' , x = 'Salary', data = df_my_list1 , color = 'salmon' ).set_title(\"India\")\n",
+    "sns.barplot( y = 'DevType' , x = 'ConvertedComp', data = median_sal_ind , color = 'salmon' ).set_title(\"India\")\n",
     "plt.xlabel(\"Median Salary(USD)\")\n",
     "plt.ylabel(\"\")"
    ]
